stress-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-test
spec:
  selector:
    matchLabels:
      run: stress-test
  replicas: 4
  template:
    metadata:
      labels:
        run: stress-test
    spec:
      containers:
      - name: stress-test
        image: shdkej/stress-server:0.1.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 100Mi
---

apiVersion: v1
kind: Service
metadata:
  name: stress-test
  labels:
    run: stress-test
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    run: stress-test
