stress-test-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stress-server-ingress
spec:
  rules:
  - host: stress.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: stress-test
          servicePort: 8080
