stress-test-sidecar.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stress-server
spec:
  hosts:
  - "*"
  gateways:
  - stress-gateway
  http:
  - match:
    - uri:
        exact: /server
    route:
    - destination:
        host: stress-test
        port:
          number: 8080
